# Kevin-s-repository

./: 222.sh  README.md  aaa.py  检测.txt
Assembly Language/: 将0_0的内容复制到cs_0中.asm  将数据和代码放进不同的段.asm  更灵活的访问内存的方式(将大小写置换).asm
C++/: 41个人循环为3的约瑟夫死亡游戏.cpp  Array.cpp  C++伪生成器.cpp  C++写两数之和.cpp  C++基本格式.txt  C++容器.cpp  C++带头结点的单链表创立.cpp  C++生成器.cpp  C++码图作业1.1.txt  C++码图作业1.2错误.txt  C++码图作业1.3奇数菱形（正确）.txt  C++码图作业1.3奇数菱形（自己想的，也正确）.txt  README.md  Stack(链表).cpp  Stack.cpp  circle_death_game_improved.cpp  leetcode两数相加的逆序输出java版.txt  stack2.cpp  unit_5_openssl_大数函数.cc  不分配内存的数组.txt  两数相加(对象).cpp  二进制和十进制互相转换.cpp  二进制转化为10进制.cpp  任意矩阵乘法.cpp  仿射密码设计.cpp  伪随机数生成器器_线性同余和BBS.cpp  函数模板.txt  分治算法求逆序数.cpp  分治算法求逆序数.txt  利用栈将字符串倒序输出.txt  加解密+计算频率.cpp  动态规划之硬币找零问题.cpp  动态规划矩阵最优解.cpp  四个柱子的汉诺塔.txt  异常处理.txt  循环链表.cpp  拷贝构造函数.txt  指针++.cpp  指针交换嗷.txt  数组当参数是传地址！.txt  (+17 more)
C++_MT/: 2的幂次方.cpp  9.1.cpp  C++mt1.3奇数菱形（自己想的，也正确）.txt  C++mt作业1.1.cpp  C++mt作业1.2错误.txt  C++mt作业1.3奇数菱形（正确）.cpp  C++person虚函数.cpp  String类.cpp  get_min函数模板.cpp  node_insert模板类.cpp  友元函数.cpp  命名空间.cpp  大整数之和.cpp  大整数乘积.cpp  大整数减法.cpp  最后一个单词的长度.cpp  查找子字符串第一次出现的位置.cpp  根据公式输出圆周率.cpp  模板类.cpp  爬楼梯.cpp  矩阵乘法.cpp  转义字符串.cpp  输出n!.cpp  输出一年的哪一天.cpp  输出平方根.cpp  输出符的重载.cpp  重载中括号.cpp  重载小括号.cpp  重载输出运算符.cpp  （多态）Set类.cpp
C++项目/: C++项目.sln
C_Homework/: 100元.c  ··.c  两个数交换.cpp  判断的条件.cpp  加大括号的IF判断.cpp  头插法创建链表.cpp  浮点数的运算.cpp  用栈进制转换.txt  计算时间1.cpp  计算时间差.cpp  随便一道题.cpp
C语言/: .....cpp  100元.c  C语言写哈希表.c  ··.c  两个数交换.cpp  (+8 more)
tester/: CMakeLists.txt
tester/implementation/: unit_7.cc
tester/test/: test_main.cc  test_unit_7.cc
(+504 files in other folders)
